server: Implement FD passing

https://bugzilla.gnome.org/show_bug.cgi?id=81560